--- a/tran.demo.html
+++ b/tran.demo.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta content="text/html; charset=UTF-8" http-equiv="content-type">
 		<title>Tran.js demo HTML</title>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 		<script src="tran.js"></script>
