Updated to add button element
Issues:
1. Last element is not processed by .each iteration
2. Find a ways to define default language and read the language setting
from cookie. Only read language name e.g. en-us and get the data from
respective json object. Not implemented.

--- a/tran.demo.html
+++ b/tran.demo.html
@@ -10,8 +10,11 @@
 		<h1 data-tran="title">This is title</h1>
 		<span data-tran="subtitle">This is subtitle</span>
 		<p data-tran="introduction">This is introduction paragraph</p>
+		<p data-tran="title">This is introduction paragraph</p>
 		<label data-tran="username">Username</label>
 		<input type="text" data-tran="username-placeholder" placeholder="Please enter your username" />
 		<input type="button" data-tran="submit" value="Submit" />
+		<button data-tran="submit">Button Text</button>
+		<p data-tran="submit"></p>
 	</body>
 <html>
